QTextLayout: Reconsider cursor drawing on TextObject

Revert: e99a883bd382ca950192bd66cafb2a1de6394ce7
Revert: 33238ea2c63b372ee8795eaafbfc5a859a778f8d

These two commits made the drawing of the cursor incomprehensible,
but their purpose was to fix the problem of abnormal cursor drawing
when QScriptAnalysis::Object is present. Because objects require
some special handling, they can be specially aligned or floated.

Anyway, the alignment is already reflected by ascent and descent,
and when drawing, y = position.y() + (sl.y + sl.base() - base).toReal();
works fine. So roll them back now.

We just need to specially consider the case where the QScriptItem is a
QScriptAnalysis::Object, keeping the base and descent the same as the row.

Task-number: QTBUG-92468
Task-number: QTBUG-86823
Task-number: QTBUG-96288
Pick-to: 6.2 6.4
Change-Id: I6d9a0e00fbc3823e0cc8e0e8bd061da5782d1f8a
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit de16300661bc498eb02d8d5b36ccc07ebe595ca2)

* asturmlechner 2023-01-18: Resolve conflict with dev branch commit
  5335cc4a5a73bbd6d717989b4257660b92000fb6

* asturmlechner 2023-06-12: Resolve conflict with kde/5.15 commit
  28b62aa315efd9408c7310331e45195ae4ed663d